services.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-frontend-service
spec:
  selector:
    app: news-frontend
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
