ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "hackernews.virrupakshatech.in"
    http:      
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: news-backend-service
            port:
              number: 3000
  - host: "hackernews.virrupakshatech.in"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: news-frontend-service
            port:
              number: 8080
